--- a/src/app/components/detail-kajian/detail-kajian.component.css
+++ b/src/app/components/detail-kajian/detail-kajian.component.css
@@ -1,13 +1,3 @@
-#content-tab {
-    padding-bottom: 5em;
-}
-#content-tab .nav-item {
-    background-color: rgba(255,255,255,.3);
-}
-#content-tab .tab-content {
-    background-color: #fff;
-    padding: 2em;
-}
 .kajian-img-loader {
     text-align: center;
 }
@@ -27,6 +17,7 @@
 	border-radius: 50%;
 	border: 1px solid rgba(0,0,0,.3);
 	margin-right: 1em;
+	margin-left: 1em ;
 }
 .author a span {
 	font-size: .8rem;
