--- a/src/app/components/majelis/majelis.component.html
+++ b/src/app/components/majelis/majelis.component.html
@@ -6,7 +6,7 @@
         </div>
       </div>
       <div *ngIf="user?.length > 0; else noData">
-	      <div class="col-xs-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body masjid" *ngFor="let data of user">
+	      <div class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body masjid" *ngFor="let data of user">
 	          <div class="masjid-title">
 	            <h2>{{ data.nama }}</h2>
 	            <p>@{{ data.username }}<br></p>
@@ -21,7 +21,7 @@
 </section>
 
 <ng-template #noData>
-	<div class="col-xs-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body masjid">
+	<div class="col-12 col-md-6 offset-md-3 col-lg-4 offset-lg-4 content__body masjid">
 		<p>Data Majelis tidak ditemukan.</p>
 	</div>
 </ng-template>
