--- a/src/app/components/tambah/tambah.component.html
+++ b/src/app/components/tambah/tambah.component.html
@@ -1,9 +1,9 @@
 <section id="content">
   <div class="container">
-      <div class="col-xs-12 offset-md-2 offset-lg-3 content__header">
+      <div class="col-12 offset-md-2 offset-lg-3 content__header">
           <h2>Post Kajian</h2>
       </div>
-      <div class="col-xs-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body">
+      <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body">
           <form (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <label for="judul">Judul Kajian</label>
@@ -27,9 +27,9 @@
               </div>
               <div class="form-group">
                 <label for="poster">Poster</label>
-                <div class="progress">
+                <!-- <div class="progress">
                   <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
-                </div>
+                </div> -->
                 <br>
                 <input type="file" class="form-control" id="poster" [(ngModel)]="kajian.poster" name="poster" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
               </div>
