--- a/src/app/templates/header/header.component.html
+++ b/src/app/templates/header/header.component.html
@@ -1,5 +1,5 @@
       <nav class="navbar navbar-expand-md navbar-light bg-light custom-nav">
-        <a class="navbar-brand" href="#"><img src="assets/templates/img/icons/books.ico" height="40"></a>
+        <a class="navbar-brand" routerLink="/"><img src="assets/templates/img/icons/books.ico" height="40"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
