Features : Update & Delete Kajian, Update Profile Info, Changes on Update Tab-Pane

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,9 @@
         </div>
           <form [formGroup]="userForm" class="login100-form validate-form" (ngSubmit)="login()">
             <span class="login100-form-title">
-              Sistem Informasi Jadwal Kajian Islam
+              SIJAKI
+              <br>
+              <small style="font-family: sans-serif; font-size: 1rem; color: #999;">Sistem Informasi Jadwal Kajian Islam</small>
             </span>
             <app-notification></app-notification>
 
