--- a/src/app/components/kajian/edit/edit.component.html
+++ b/src/app/components/kajian/edit/edit.component.html
@@ -1,7 +1,7 @@
 <section id="content">
   <div class="container">
       <div class="col-12 offset-md-2 offset-lg-3 content__header">
-          <h2>Post Kajian</h2>
+          <h2>Edit Kajian</h2>
       </div>
       <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 content__body">
           <form (ngSubmit)="onSubmit()">
@@ -23,19 +23,10 @@
               </div>
               <div class="form-group">
                 <label for="kategori">Kategori</label>
-                <select class="form-control" id="kategori" [(ngModel)]="kajian.kategori" name="kategori">
-                  <option value="" disabled selected="">- Pilih Kategori -</option>
-                  <option value="Rutin">Rutin</option>
-                  <option value="Tematik">Tematik</option>
-                  <option value="Tabligh Akbar">Tabligh Akbar</option>
-                </select>
+                <input type="text" class="form-control" id="kategori" [(ngModel)]="kajian.kategori" name="kategori" placeholder="Contoh: Tabligh Akbar, Tauhid, Tahsin, Fiqih, ...">
               </div>
               <div class="form-group">
                 <label for="poster">Poster</label>
-                <!-- <div class="progress">
-                  <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">10%</div>
-                </div> -->
-                <br>
                 <input type="file" class="form-control" id="poster" [(ngModel)]="kajian.poster" name="poster" (change)="selectFile($event)" accept=".jpg,.jpeg,.png">
               </div>
             <button type="submit" class="btn btn-info btn-block">Submit</button>
