--- a/src/app/components/kajian/kajian.component.html
+++ b/src/app/components/kajian/kajian.component.html
@@ -84,7 +84,7 @@
           <div *ngFor="let data of tablighAkbar">
             <div class="masjid-title">
               <h4>{{ data.judul }}</h4>
-              <p>@{{ data.pemateri }}<br>
+              <p>{{ data.pemateri }}<br>
               {{ data.lokasi }} <br> {{ data.tanggal }}
               </p>
             </div>
